# integral-calc-check

./: CMakeLists.txt  README.md
exsample/: CMakeLists.txt  main.cpp
include/icc/: icc.hpp
